# NaoFramework

./: CMakeLists.txt  Doxyfile  README.md
cmake/Modules/: .FindReadline.cmake.swp
include/NaoFramework/Comm/: Blackboard.hpp  ExternalBlackboardAdapter.hpp  ExternalBlackboardAdapterMap.hpp  LocalBlackboardAdapter.hpp  Types.hpp
include/NaoFramework/Console/: .Console.hpp.swp  Console.hpp
include/NaoFramework/Core/: Brain.hpp  BrainWave.hpp
include/NaoFramework/Log/: Frontend.hpp  Loggable.hpp  Types.hpp
include/NaoFramework/Modules/: Brain.hpp  BrainWave.hpp  DynamicModule.hpp  DynamicModuleInterface.hpp  ModuleInterface.hpp
moduleExamples/: compileModule.sh
moduleExamples/Reader/: Reader.cpp
moduleExamples/Writer/: Writer.cpp
src/: .Console.cpp.swp  Blackboard.cpp  Brain.cpp  BrainWave.cpp  CMakeLists.txt  Console.cpp  DynamicModule.cpp  LogFrontend.cpp  Loggable.cpp  ModuleInterface.cpp  main.cpp
